--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic-native/status-bar": "^5.18.0",
     "@ionic/angular": "^4.11.7",
     "@ionic/storage": "^2.2.0",
+    "angularfire2": "^5.3.0",
     "cordova-android": "^8.1.0",
     "cordova-ios": "5.1.1",
     "cordova-plugin-file": "^6.0.2",
