--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cordova-plugin-nativestorage": "^2.3.2",
     "core-js": "^2.6.11",
     "firebase": "^7.6.1",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "uuid": "^3.3.3",
@@ -54,6 +55,7 @@
     "@angular/language-service": "~8.1.2",
     "@ionic/angular-toolkit": "^2.1.1",
     "@ionic/lab": "2.0.15",
+    "@types/hammerjs": "^2.0.36",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
