--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "firebase": "^7.6.1",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.5.1",
+    "safe-pipe": "^0.3.0",
     "tslib": "^1.9.0",
     "uuid": "^3.3.3",
     "zone.js": "~0.9.1"
